--- a/tethysapp/hydroviewer_ecuador/templates/hydroviewer_ecuador/home.html
+++ b/tethysapp/hydroviewer_ecuador/templates/hydroviewer_ecuador/home.html
@@ -34,14 +34,13 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h2 class="modal-title" id="about-modal-label">About HydroViewer</h2>
+                <h2 class="modal-title" id="about-modal-label"> Acerca HYDROVIEWER</h2>
             </div>
             <div class="modal-body">
                 <p id="overview"><b>
-                    This web application was created to allow users to visualize hydrologic model results
-                    from different sources. It currently displays GloFAS and LDAS model results.
+                    Hydroviewer es una app creada para visualizar pronostico de caudales para cualquier rio de Ecuador.
                 </b></p>
-                <h3>How it works</h3>
+                <h3>Forma de uso</h3>
                 <h6>1. Click on Get Started.</h6>
                 <h6>2. Select a hydrologic model and a corresponding watershed of interest.</h6>
                 <h6>3. Once you click select a watershed, the map will automatically zoom to that specific watershed.</h6>
@@ -54,8 +53,7 @@
 
                 <h5>Additional Resources:</h5>
                 <p><a href="https://www.ecmwf.int/en/about/what-we-do/global-forecasts" target="_blank">ECMWF Global Forecasts</a></p>
-                <p><a href="http://rapid-hub.org/" target="_blank">RAPID River Routing Model</a></p>
-                <p><a href="https://streamflow-prediction-tool.readthedocs.io/en/latest/" target="_blank">StreamFlow Prediction Tool</a></p>
+
             </div>
         </div>
     </div>
