--- a/tethysapp/hydroviewer_ecuador/public/css/main.css
+++ b/tethysapp/hydroviewer_ecuador/public/css/main.css
@@ -53,8 +53,8 @@
   max-height: 90%;
   overflow-y: auto;
   margin: 5px;
-  color: white;
-  background: #286090;
+  color: #fcbf10;
+  background: #20295c;
   border: 1px #ddd solid;
   z-index: 999;
 }
@@ -127,7 +127,7 @@
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #585757;
+  background-color: #fcbf10;
   color: white;
 }
 
