--- a/tethysapp/hydroviewer_ecuador/templates/hydroviewer_ecuador/base.html
+++ b/tethysapp/hydroviewer_ecuador/templates/hydroviewer_ecuador/base.html
@@ -36,7 +36,11 @@
 <script>
     var staticGeoJSON = "{% static base_name|add:'/geojson/' %}";
 </script>
+<script>
+    var staticGeoJSON2 = "{% static base_name|add:'/geojson2/' %}";
+</script>
 <script src="{% static 'hydroviewer_ecuador/js/regionsIndex.js' %}" type="text/javascript"></script>
+<script src="{% static 'hydroviewer_ecuador/js/regionsIndex2.js' %}" type="text/javascript"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.js" type="text/javascript"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/3.20.1/ol.js" type="text/javascript"></script>
 <script src="https://code.highcharts.com/stock/highstock.js"></script>
