--- a/tethysapp/hydroviewer_ecuador/templates/hydroviewer_ecuador/base.html
+++ b/tethysapp/hydroviewer_ecuador/templates/hydroviewer_ecuador/base.html
@@ -39,12 +39,16 @@
 <script>
     var staticGeoJSON2 = "{% static base_name|add:'/geojson2/' %}";
 </script>
+  <script>
+    var staticGeoJSON3 = "{% static base_name|add:'/geojson3/' %}";
+  </script>
 <script src="{% static 'hydroviewer_ecuador/js/regionsIndex.js' %}" type="text/javascript"></script>
 <script src="{% static 'hydroviewer_ecuador/js/regionsIndex2.js' %}" type="text/javascript"></script>
+<script src="{% static 'hydroviewer_ecuador/js/regionsIndex3.js' %}" type="text/javascript"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.js" type="text/javascript"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/3.20.1/ol.js" type="text/javascript"></script>
 <script src="https://code.highcharts.com/stock/highstock.js"></script>
-<script src="http://code.highcharts.com/highcharts-more.js"></script>
+<script src="https://code.highcharts.com/highcharts-more.js"></script>
 <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
 <script src="https://highcharts.github.io/export-csv/export-csv.js"></script>
 <script src="{% static base_name|add:'/js/wms.js' %}" type="text/javascript"></script>
