--- a/tethysapp/hydroviewer_ecuador/templates/hydroviewer_ecuador/ecmwf.html
+++ b/tethysapp/hydroviewer_ecuador/templates/hydroviewer_ecuador/ecmwf.html
@@ -9,18 +9,6 @@
 {% block app_content %}
   <div id="map" class="map">
       <div id="map-view-legend" class="map-view-legend ol-unselectable ol-control">
-          <div id="wmslegend0" hidden>
-             <img src="http://128.187.106.130:80/glofas-proxy/glofas-ows-prod/?version=1.3.0&amp;service=WMS&amp;request=GetLegendGraphic&amp;sld_version=1.1.0&amp;layer=AccRainEGE&amp;format=image/png&amp;STYLE=default"/>
-          </div>
-          <div id="wmslegend1" hidden>
-             <img src="http://128.187.106.130:80/glofas-proxy/glofas-ows-prod/?version=1.3.0&amp;service=WMS&amp;request=GetLegendGraphic&amp;sld_version=1.1.0&amp;layer=EGE_probRgt50&amp;format=image/png&amp;STYLE=default"/>
-          </div>
-          <div id="wmslegend2" hidden>
-             <img src="http://128.187.106.130:80/glofas-proxy/glofas-ows-prod/?version=1.3.0&amp;service=WMS&amp;request=GetLegendGraphic&amp;sld_version=1.1.0&amp;layer=EGE_probRgt150&amp;format=image/png&amp;STYLE=default"/>
-          </div>
-          <div id="wmslegend3" hidden>
-             <img src="http://128.187.106.130:80/glofas-proxy/glofas-ows-prod/?version=1.3.0&amp;service=WMS&amp;request=GetLegendGraphic&amp;sld_version=1.1.0&amp;layer=EGE_probRgt300&amp;format=image/png&amp;STYLE=default"/>
-          </div>
           <div>
               <svg width="20" height="20" viewPort="0 0 20 20" version="1.1"
                    xmlns="http://www.w3.org/2000/svg">
@@ -28,13 +16,13 @@
               </svg>
               Streams <input id="stp-stream-toggle" class="toggle-layer" type="checkbox" checked data-toggle="toggle" data-size="mini">
           </div>
-          <div>
+          <!--<div>
               <svg width="20" height="20" viewPort="0 0 20 20" version="1.1"
                    xmlns="http://www.w3.org/2000/svg">
                   <polyline points="0 10, 0 0, 10 0, 10 10, 0 10" stroke="rgba(255,0,0,1)" fill="rgba(255,0,0,1)" stroke-width="2"/>
               </svg>
               Stations <input id="stp-stations-toggle" class="toggle-layer" type="checkbox" checked data-toggle="toggle" data-size="mini">
-          </div>
+          </div>-->
           <div>
               <svg width="20" height="20" viewPort="0 0 20 20" version="1.1"
                    xmlns="http://www.w3.org/2000/svg">
@@ -79,15 +67,15 @@
           </div>
       <div>
         <br>
-        {% gizmo select_input regions %}
+        {% gizmo select_input2 regions %}
       </div>
       <div>
         <br>
-        {% gizmo select_input basins %}
+        {% gizmo select_input2 basins %}
       </div>
             <div>
         <br>
-        {% gizmo select_input hidric %}
+        {% gizmo select_input2 hidric %}
       </div>
 
     </div>
@@ -117,11 +105,11 @@
     </div>
   {% endif %}
 
-  {% if defaultUpdateButton %}
+  <!--{% if defaultUpdateButton %}
   <div id="defaultModelContainer" style="margin-right: 15px;">
     {% gizmo defaultUpdateButton %}
   </div>
-  {% endif %}
+  {% endif %}-->
   <div class="header-button glyphicon-button" data-toggle="tooltip" data-placement="bottom" title="View Graph">
     <a data-toggle="modal" data-target="#graph"><span class="glyphicon glyphicon-globe"></span></a>
   </div>
