--- a/tethysapp/hydroviewer_ecuador/templates/hydroviewer_ecuador/ecmwf.html
+++ b/tethysapp/hydroviewer_ecuador/templates/hydroviewer_ecuador/ecmwf.html
@@ -132,8 +132,8 @@
                         <div align="right">
                             <img class="obslogos" src="{% static base_name|add:'/images/servir_logo.jpeg' %}">
                             <img class="obslogos" src="{% static base_name|add:'/images/my-icon-inamhi.png' %}">
-                            <img class="obslogos" src="{% static base_name|add:'/images/EcoCiencia.png' %}">
                             <img class="obslogos" src="{% static base_name|add:'/images/byu_logo.png' %}">
+                            <img class="obslogos" src="{% static base_name|add:'/images/EcoCiencia.png' %}">
                         </div>
                     </div>
                 </div>
@@ -198,8 +198,8 @@
             <div align="right">
                 <img class="obslogos" src="{% static base_name|add:'/images/servir_logo.jpeg' %}">
                 <img class="obslogos" src="{% static base_name|add:'/images/my-icon-inamhi.png' %}">
-                <img class="obslogos" src="{% static base_name|add:'/images/EcoCiencia.png' %}">
                 <img class="logos" src="{% static base_name|add:'/images/byu_logo.png' %}">
+                <img class="obslogos" src="{% static base_name|add:'/images/EcoCiencia.png' %}">
             </div>
           </div>
         </div>
@@ -256,9 +256,15 @@
                     <span class="glyphicon glyphicon-play"></span> Download Forecast
                   </a>
                 </div>
+                <h6>Download Forecast Ensemble Data</h6>
+                <div id="download_forecast_ens" class="btn-group hidden long-term-select" role="group">
+                  <a class="btn btn-info" style="color:#fcbf10; background-color:#b5001a;border-color:#b5001a;" role="button" id="submit-download-forecast-ens">
+                    <span class="glyphicon glyphicon-play"></span> Download Forecast Ensemble
+                  </a>
+                </div>
                 <h6>Download ERA 5 Data</h6>
                 <div id="download_era_5" class="btn-group hidden" role="group">
-                  <a class="btn btn-info" style="color:#fcbf10; background-color:#b5001a;border-color:#b5001a;" role="button" id="submit-download-5-csv">
+                  <a class="btn btn-success" style="color:#fcbf10; background-color:#20295c;border-color:#20295c;" role="button" id="submit-download-5-csv">
                     <span class="glyphicon glyphicon-play"></span> Download ERA 5 Data
                   </a>
                 </div>
